--- a/index.html
+++ b/index.html
@@ -1,3 +1,61 @@
+<style>
+  html {
+    box-sizing: border-box;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+  </style>
+
 <html>
     <body>
         <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
@@ -34,23 +92,97 @@
    
         </p>
 
-<img src="img_girl.jpg" alt="President" width="150" height="100">
+<!-- <img src="img_girl.jpg" alt="President" width="150" height="100">
 <img src="img_girl.jpg" alt="vice president" width="150" height="100" style="padding-left: 30px";>
 <img src="img_girl.jpg" alt="Operation Manager" width="150" height="100"style="padding-left: 30px";>
 <img src="img_girl.jpg" alt="Director of Marketing" width="150" height="100"style="padding-left: 30px";>
 <img src="img_girl.jpg" alt="Director of Accounting" width="150" height="100"style="padding-left: 30px";>
-<img src="img_girl.jpg" alt="Director of Engeenering" width="150" height="100"style="padding-left: 30px";>
-
-
-<figure>
-  <img src="img_CEO.jpg" alt="President" width="150" height="100">
-  <figcaption>Samuel Ballesteros. Bachelor of Sciences. SPU.</figcaption>
-</figure>
+<img src="img_girl.jpg" alt="Director of Engeenering" width="150" height="100"style="padding-left: 30px";> -->
 
 
 
 
+<div class ="team">
 
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="img1.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Jane Doe</h2>
+        <p class="title">CEO &amp; Founder</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="img2.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Mike Ross</h2>
+        <p class="title">Art Director</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>John Doe</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="column">
+  <div class="card">
+    <img src="img2.jpg" alt="Mike" style="width:100%">
+    <div class="container">
+      <h2>Mike Ross</h2>
+      <p class="title">Art Director</p>
+      <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+      <p>example@example.com</p>
+      <p><button class="button">Contact</button></p>
+    </div>
+  </div>
+</div>
+</div>
+<!-- <div class="column">
+  <div class="card">
+    <img src="img2.jpg" alt="Mike" style="width:100%">
+    <div class="container">
+      <h2>Mike Ross</h2>
+      <p class="title">Art Director</p>
+      <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+      <p>example@example.com</p>
+      <p><button class="button">Contact</button></p>
+    </div>
+  </div>
+</div>
+
+<div class="column">
+  <div class="card">
+    <img src="img2.jpg" alt="Mike" style="width:100%">
+    <div class="container">
+      <h2>Mike Ross</h2>
+      <p class="title">Art Director</p>
+      <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+      <p>example@example.com</p>
+      <p><button class="button">Contact</button></p>
+    </div>
+  </div>
+</div> -->
  
          
         
