--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2>Mario Antonio Martinez</h2>
         <p class="title">Software Engeneer</p>
         <p>Bachelor Computer Science Cyber Security.</p>
-        <p>MMartinez@Sainpeters.edu</p>
+        <p>MMartinez@Sainpeters.eduj</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
