--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <hr size="5" noshade>
 
     <div style="padding-left: 100px; padding-right: 100px; padding-top: 40px">
-        <button onclick="location.href='subjects';" type="button">
-            Explore 3D Models</button>
-        <h1>
-            What is Scholar?
-        </h1>
+        <button onclick="location.href='subjects';" type="button">Explore 3D Models</button>
+
+        <h1>What is Scholar?</h1>
 
         <p>
-
             <p>Our organization ScholAR is a website that will provide users with the ability to explore 3D digital model of their desired subjects in Augmented Reality</p>
             <p>Augmented Reality is being used increasingly in education today, bringing a geat impact on the learning experience</p>
             <p>A more enjoyable time exploring , keeping your attention AR is the way to make books more interactive</p>
             <p>Fun and knowledge a great combinacion, our website will provide both</p>
-
             <p>
                 <img src="programming.gif" alt="Computer man" style="float:right;width:500px;height:100px;">
 
