--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="column">
                         <div class="card">
-                            <img src="img1.jpg" alt="Samuel" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Samuel" style="width:100%">
                             <div class="container">
                                 <h2>Samuel Ballesteros</h2>
                                 <p class="title">CEO/Art Director</p>
@@ -48,7 +48,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img2.jpg" alt="Mario" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Mario" style="width:100%">
                             <div class="container">
                                 <h2>Mario Antonio Martinez</h2>
                                 <p class="title">Software Engeneer</p>
@@ -61,7 +61,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img3.jpg" alt="Julian" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Julian" style="width:100%">
                             <div class="container">
                                 <h2>Julian Mayugba</h2>
                                 <p class="title">Software Engeneer</p>
@@ -74,7 +74,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img4.jpg" alt="Sundus" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Sundus" style="width:100%">
                             <div class="container">
                                 <h2>Sundus Elmosallamy</h2>
                                 <p class="title">Software Engeneer</p>
@@ -87,7 +87,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img5.jpg" alt="Brandon" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Brandon" style="width:100%">
                             <div class="container">
                                 <h2>Brandon Seelall</h2>
                                 <p class="title">Software Engeneer</p>
@@ -100,7 +100,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img6.jpg" alt="Maicol" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Maicol" style="width:100%">
                             <div class="container">
                                 <h2>Maicol Baez</h2>
                                 <p class="title">Software Engeneer</p>
