--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html>
 
 <body>
-    <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+    <div class="header" id="testHeader">
+        <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+    </div>
+    <script>
+        window.onscroll = function() {scrollFunction()};
+        var header = document.getElementById("testHeader");
+        var sticky = header.offsetTop;
+        function scrollFunction(){
+            if (window.pageYOffset > sticky){
+                header.classList.add("sticky");
+            } else {
+                header.classList.remove("sticky");
+            }
+        }
+    </script>
 
     <hr size="5" noshade>
 
@@ -35,7 +49,7 @@
                 <div class="row">
                     <div class="column">
                         <div class="card">
-                            <img src="img1.jpg" alt="Samuel" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Samuel" style="width:100%">
                             <div class="container">
                                 <h2>Samuel Ballesteros</h2>
                                 <p class="title">CEO/Art Director</p>
@@ -48,7 +62,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img2.jpg" alt="Mario" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Mario" style="width:100%">
                             <div class="container">
                                 <h2>Mario Antonio Martinez</h2>
                                 <p class="title">Software Engeneer</p>
@@ -61,7 +75,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img3.jpg" alt="Julian" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Julian" style="width:100%">
                             <div class="container">
                                 <h2>Julian Mayugba</h2>
                                 <p class="title">Software Engeneer</p>
@@ -74,7 +88,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img4.jpg" alt="Sundus" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Sundus" style="width:100%">
                             <div class="container">
                                 <h2>Sundus Elmosallamy</h2>
                                 <p class="title">Software Engeneer</p>
@@ -87,7 +101,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img5.jpg" alt="Brandon" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Brandon" style="width:100%">
                             <div class="container">
                                 <h2>Brandon Seelall</h2>
                                 <p class="title">Software Engeneer</p>
@@ -100,7 +114,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="img6.jpg" alt="Maicol" style="width:100%">
+                            <img src="placeholder_profile.png" alt="Maicol" style="width:100%">
                             <div class="container">
                                 <h2>Maicol Baez</h2>
                                 <p class="title">Software Engeneer</p>
@@ -112,6 +126,7 @@
                     </div>
 
                 </div>
+
 
 </body>
 
