Fixed look of Homepage
Playing around with AR models

--- a/ar.html
+++ b/ar.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <script src="js\aframe.min.js"></script>
-    <script src="three.min.js"></script>
+    <script src="js\three.min.js"></script>
     <script src="js\AR.js\aframe\build\aframe-ar.js"></script>
   
 
