--- a/subjects.html
+++ b/subjects.html
@@ -45,7 +45,7 @@
            urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus,
            ut semper nulla egestas</p>
           </div>
-          <a onclick="location.href='ar';" href="#">
+          <a onclick="location.href='ar?model=enthroctye.obj';" href="#">
             <div id = "3dModel" style="float:right;width:600px;height:600px;"></div>
           </a>
         </div>
