--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="css\index.css">
 <html>
 
@@ -25,13 +26,15 @@
 
         <h1>What is Scholar?</h1>
 
-        <p>
-            <p>Our organization ScholAR is a website that will provide users with the ability to explore 3D digital model of their desired subjects in Augmented Reality</p>
-            <p>Augmented Reality is being used increasingly in education today, bringing a geat impact on the learning experience</p>
-            <p>A more enjoyable time exploring , keeping your attention AR is the way to make books more interactive</p>
-            <p>Fun and knowledge a great combinacion, our website will provide both</p>
-            <p>
-                <img src="programming.gif" alt="Computer man" style="float:right;width:500px;height:100px;">
+            <div id="description">
+                <p>Our organization ScholAR is a website that will provide users with the ability to explore 3D digital model of their desired subjects in Augmented Reality</p>
+                <p>Augmented Reality is being used increasingly in education today, bringing a geat impact on the learning experience</p>
+                <p>A more enjoyable time exploring , keeping your attention AR is the way to make books more interactive</p>
+                <p>Fun and knowledge a great combinacion, our website will provide both</p>
+            </div>
+
+            <div id="advantages">
+                <img id ="example_gif" src="ARcode_on_the_Webpage.gif" alt="Computer man">
 
                 <ul>
                     <li>A more enjoyable time exploring different subjects</li>
@@ -41,8 +44,7 @@
                     <li>Enhance your knowledge</li>
                     <li>No age or level education bounds to your research</li>
                 </ul>
-
-            </p>
+            </div>
 
             <div class="team">
 
