--- a/subjects.html
+++ b/subjects.html
@@ -38,15 +38,16 @@
         <p>Biology The word Biology is derived from the Greek words “Bios” meaning Life, and “Logos” meaning Study.</p>
         <div>
         <div style="display:inline-block;">
-        <p style="float:left;width:1000px;height:600px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, 
+        <p style="float:left;max-width:1000px;height:600px;width:100%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, 
            eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class 
            aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper.
            Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum,
            urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus,
            ut semper nulla egestas</p>
-          </div>
+          
           <a onclick="location.href='ar?model=enthroctye.obj';" href="#">
             <div id = "3dModel" style="float:right;width:600px;height:600px;"></div>
+          </div>
           </a>
         </div>
         <div style="width: 1000px;height: 1000px;">
