--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="css\index.css">
 <html>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
     <div class="header" id="testHeader">
         <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
@@ -19,9 +19,7 @@
         }
     </script>
 
-    <hr size="5" noshade>
-
-    <div style="padding-left: 100px; padding-right: 100px; padding-top: 40px">
+    <div id="content">
         <button onclick="location.href='subjects';" type="button">Explore 3D Models</button>
 
         <h1>What is Scholar?</h1>
@@ -33,8 +31,11 @@
                 <p>Fun and knowledge a great combinacion, our website will provide both</p>
             </div>
 
+            
+
             <div id="advantages">
-                <img id ="example_gif" src="ARcode_on_the_Webpage.gif" alt="Computer man">
+               <h2>Why Use ScholAR?</h2>
+               <aside> <img id ="example_gif" src="ARcode_on_the_Webpage.gif" alt="Computer man"></aside>
 
                 <ul>
                     <li>A more enjoyable time exploring different subjects</li>
@@ -46,12 +47,19 @@
                 </ul>
             </div>
 
-            <div class="team">
+
+            <div>
+                <br>
+                <h1>About The Team</h1>
+                <br>
+            </div>
+
+            <!-- <div class="team"> -->
 
                 <div class="row">
                     <div class="column">
                         <div class="card">
-                            <img src="placeholder_profile.png" alt="Samuel" style="width:100%">
+                            <img class ="profile_picture" src="placeholder_profile.png" alt="Samuel" >
                             <div class="container">
                                 <h2>Samuel Ballesteros</h2>
                                 <p class="title">CEO/Art Director</p>
@@ -64,12 +72,12 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="placeholder_profile.png" alt="Mario" style="width:100%">
+                            <img class ="profile_picture" src="placeholder_profile.png" alt="Mario">
                             <div class="container">
                                 <h2>Mario Antonio Martinez</h2>
                                 <p class="title">Software Engeneer</p>
                                 <p>Bachelor Computer Science Cyber Security.</p>
-                                <p>MMartinez@Sainpeters.eduj</p>
+                                <p>MMartinez@Sainpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
                         </div>
@@ -77,7 +85,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="placeholder_profile.png" alt="Julian" style="width:100%">
+                            <img class ="profile_picture" src="placeholder_profile.png" alt="Julian">
                             <div class="container">
                                 <h2>Julian Mayugba</h2>
                                 <p class="title">Software Engeneer</p>
@@ -90,7 +98,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="placeholder_profile.png" alt="Sundus" style="width:100%">
+                            <img class ="profile_picture" src="placeholder_profile.png" alt="Sundus">
                             <div class="container">
                                 <h2>Sundus Elmosallamy</h2>
                                 <p class="title">Software Engeneer</p>
@@ -103,7 +111,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="placeholder_profile.png" alt="Brandon" style="width:100%">
+                            <img class ="profile_picture" src="placeholder_profile.png" alt="Brandon">
                             <div class="container">
                                 <h2>Brandon Seelall</h2>
                                 <p class="title">Software Engeneer</p>
@@ -116,7 +124,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <img src="placeholder_profile.png" alt="Maicol" style="width:100%">
+                            <img class ="profile_picture" src="placeholder_profile.png" alt="Maicol">
                             <div class="container">
                                 <h2>Maicol Baez</h2>
                                 <p class="title">Software Engeneer</p>
@@ -128,8 +136,8 @@
                     </div>
 
                 </div>
+            <!-- </div> -->
 
-
-</body>
+        </body>
 
 </html>
