Added header buttons

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <link rel="stylesheet" type="text/css" href="css\index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
-    <div class="header" id="testHeader">
-        <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+  <nav class="header" id="testHeader">
+    <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+    <div class= "navBar">
+      <ul id="navWrapper">
+        <li class = "navItem"><a href ="#">ABOUT</a></li> |
+        <li class = "navItem"><a href = "#">CONTACT</a></li> |
+        <li class = "navItem"><a href = "#">CAREERS</a></li>
+      </ul>
     </div>
-
+  </nav>
     <div id="content">
        
         <section>
