--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <h2>Mario Antonio Martinez</h2>
                                 <p class="title">Software Engeneer</p>
                                 <p>Bachelor Computer Science Cyber Security.</p>
-                                <p>MMartinez@Sainpeters.edu</p>
+                                <p>MMartinez@Saintpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                                 <h2>Julian Mayugba</h2>
                                 <p class="title">Software Engeneer</p>
                                 <p>Bachelor Computer Science Cyber Security.</p>
-                                <p>JMayugba@Sainpeters.edu</p>
+                                <p>JMayugba@Saintpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                                 <h2>Sundus Elmosallamy</h2>
                                 <p class="title">Software Engeneer</p>
                                 <p>Bachelor Computer Science Cyber Security.</p>
-                                <p>SElmosallamy@Sainpeters.edu</p>
+                                <p>SElmosallamy@Saintpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                 <h2>Brandon Seelall</h2>
                                 <p class="title">Software Engeneer</p>
                                 <p>Bachelor Computer Science Cyber Security.</p>
-                                <p>BSeelall@Sainpeters.edu</p>
+                                <p>bseelall16@saintpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                 <h2>Maicol Baez</h2>
                                 <p class="title">Software Engeneer</p>
                                 <p>Bachelor Computer Science Cyber Security.</p>
-                                <p>MBaez@Sainpeters.edu</p>
+                                <p>MBaez@Saintpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
                         </div>
