new logo + header color swap

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
   <nav class="header" id="testHeader">
-    <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+    <img src="logo.png" alt="Smiley Face" height="65" width="200">
     <div class= "navBar">
       <ul id="navWrapper">
         <li class = "navItem"><a href ="#">ABOUT</a></li> |
