--- a/subjects.html
+++ b/subjects.html
@@ -6,7 +6,7 @@
 <body>
     <canvas id="c"></canvas>
     <nav class="header" id="testHeader">
-        <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+        <img src="logo.png" alt="Smiley Face" height="65" width="200">
         <div class="navBar">
             <ul id="navWrapper">
                 <li class="navItem"><a href="#">ABOUT</a></li> |
