--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div id="content">
        
         <section>
-        <h1>What is ScholAR?</h1>
+        <h1 style="font-size: 50px;">What is ScholAR?</h1>
 
             <div id="description">
                 <p>Our organization ScholAR is a website that will provide users with the ability to explore 3D digital model of their desired subjects in Augmented Reality</p>
                 <p>Augmented Reality is being used increasingly in education today, bringing a geat impact on the learning experience</p>
                 <p>A more enjoyable time exploring , keeping your attention AR is the way to make books more interactive</p>
-                <p>Fun and knowledge a great combinacion, our website will provide both</p>
+                <p>Fun and knowledge a great combination, our website will provide both</p>
             </div>
         </section>
 
@@ -40,10 +40,18 @@
                     <li>Enhance your knowledge</li>
                     <li>No age or level education bounds to your research</li>
                 </ul>
+                <div style="padding-top:20px;">
+                  <h3>Industries that use AR for Value and benefits:</h3>
+                    <ul>
+                        <li>University</li>
+                        <li>Medical</li>
+                        <li>Manufacturing</li>
+                        <li>Space</li>
+                        <li>Military</li>
+                    </ul>
+                </div>
                  <button class="myButton" onclick="location.href='subjects';" type="button">Explore 3D Models</button>
             </div>
-
-
             <div>
                 <br>
                 <h1>About The Team</h1>
@@ -59,7 +67,7 @@
                             <div class="container">
                                 <h2>Samuel Ballesteros</h2>
                                 <p class="title">CEO/Art Director</p>
-                                <p>Bachelor Computer Sience Cyber Security.</p>
+                                <p>Bachelor Computer Science Cyber Security.</p>
                                 <p>SBallesteros@saintpeters.edu</p>
                                 <p><button class="button">Contact</button></p>
                             </div>
@@ -148,7 +156,7 @@
         </script>
         <footer class="footer">
             <div class="footer__addr">
-                <img src="logo.JPG" alt="Smiley Face" height="65" width="200">
+                <img src="logo.png" alt="Smiley Face" height="65" width="200">
                   
               <h2>Contact</h2>
               <a href ="#" style ="color: #999;">Customer Support</a>
