--- a/subjects.html
+++ b/subjects.html
@@ -49,9 +49,9 @@
                 <h1>Biology</h1>
                 <p>Biology The word Biology is derived from the Greek words “Bios” meaning Life, and “Logos” meaning Study.</p>
                 <div style="display:inline-block;">
-                    <p class="modelDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                    <p class="modelDesc">The red blood cell goes by many different names. Red Cells, Red Blood Corpuscles, Haematids, Erythoid cells, and Erythrocytes. The red blood cell in mammals lacks a cell nucleus. The cytoplasm of red blood cells is rich in hemoglobin, the iron-containing oxygen-transport metalloprotein. Each human red blood cell contains approximately 270 million hemoglobin molecules. Hemoglobin is involved in the transport of gases such as oxygen and carbon dioxide. Red blood cells are deformable, flexible, are able to stick to other cells, and have the ability to communicate with immune cells.
                         <br>
-                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                        <br> The cell membrane is made of proteins and lipids; this structure provides properties essential for cell functions such as deformability and stability while traveling the circulatory system. Human red blood cells are developed in the bone marrow and approximately 2.4 million new red blood cells are produced per second. A typical human red blood cell has a disk diameter of approximately 6.2 to 8.2 micrometers, a maximum thickness of approximately 2 to 2.5 micrometers, and a minimum thickness of approximately 0.8 to 1 micrometer. The lifespan for a mature red blood cell is about 100 to 120 days; at the end of the red blood cell lifespan, the cell is recycled in the bone marrow.
                         <br>
                     </p>
                     <h1>Useful Links:</h1>
@@ -145,16 +145,16 @@
                 <p>Civil Engineering deals with the design, construction, and maintenance of the physical and naturally built environment, including public works such as roads, bridges, canals, dams, airports, sewerage systems, pipelines, structural components of buildings, and railways.
                 </p>
                 <div style="display:inline-block;">
-                    <p class="modelDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                    <p class="modelDesc">An architectural plan is a design and planning for a building, and can contain architectural drawings, specifications of the design, calculations, time planning of the building process, and other documentation. Architectural design values make up an important part of what influences architects and designers when they make their design decisions. However, architects and designers are not always influenced by the same values and intentions. 
                         <br>
-                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                        <br>This is a three-dimensional (3D) models that represent a physical body using a collection of points in 3D space, connected by various geometric entities such as triangles, lines, curved surfaces, etc. Being a collection of data (points and other information), 3D models can be created manually, algorithmically (procedural modeling), or by scanning. Their surfaces may be further defined with texture mapping.
                         <br>
                     </p>
                     <h1>Useful Links:</h1>
                     <ul>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
+                        <li>https://floorplanner.com/</li>
+                        <li>https://onlinemasters.ohio.edu/blog/essential-skills-for-a-career-in-civil-engineering/</li>
+                        <li>https://www.easycalculation.com/engineering/civil/civil.php</li>
                     </ul>
                 </div>
                 <a onclick="location.href='ar?model=building_obj';" href="#">
@@ -168,16 +168,16 @@
                 <h1>Math</h1>
                 <p>Math is the calculation or the conclusion based on the relevant facts and figures.</p>
                 <div style="display:inline-block;">
-                    <p class="modelDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                    <p class="modelDesc">A Möbius strip, band, or loop also spelled Mobius or Moebius, is a surface with only one side (when embedded in three-dimensional Euclidean space) and only one boundary. The Möbius strip has the mathematical property of being unorientable. It can be realized as a ruled surface. An example of a Möbius strip can be created by taking a paper strip and giving it a half-twist, and then joining the ends of the strip to form a loop. However, the Möbius strip is not a surface of only one exact size and shape, such as the half-twisted paper strip depicted in the illustration. Rather, mathematicians refer to the closed Möbius band as any surface that is homeomorphic to this strip. Its boundary is a simple closed curve, that is, homeomorphic to a circle. This allows for a very wide variety of geometric versions of the Möbius band as surfaces each having a definite size and shape.
                         <br>
-                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                        <br> 
                         <br>
                     </p>
                     <h1>Useful Links:</h1>
                     <ul>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
+                        <li>https://mathworld.wolfram.com/MoebiusStrip.html</li>
+                        <li>https://www.fxsolver.com/solve/</li>
+                        <li>https://mathcraft.wonderhowto.com/how-to/math-craft-monday-community-submissions-plus-make-mobius-strips-0131281/</li>
                     </ul>
                 </div>
                 <a onclick="location.href='ar?model=mobiousBand_obj';" href="#">
@@ -191,16 +191,16 @@
                 <h1>Mechanical Engineering</h1>
                 <p>Mechanical Engineering is the the branch of engineering dealing with the design, construction, and use of machines.</p>
                 <div style="display:inline-block;">
-                    <p class="modelDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                    <p class="modelDesc"> Petrol engine (British English) or gasoline engine (American English) is an internal combustion engine with spark-ignition, designed to run on petrol (gasoline) and similar volatile fuels. In most petrol engines, the fuel and air are usually mixed after compression (although some modern petrol engines now use cylinder-direct petrol injection). The pre-mixing was formerly done in a carburetor, but now it is done by electronically controlled fuel injection, except in small engines where the cost/complication of electronics does not justify the added engine efficiency. The process differs from a diesel engine in the method of mixing the fuel and air, and in using spark plugs to initiate the combustion process. In a diesel engine, only air is compressed (and therefore heated), and the fuel is injected into very hot air at the end of the compression stroke and self-ignites.
                         <br>
-                        <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porta, elit at fermentum tristique, sem nunc hendrerit massa, eget tincidunt nibh quam tincidunt risus. Praesent varius vel nisi ut aliquam. In scelerisque sem vitae cursus dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque auctor sit amet tellus vel semper. Aenean nisi enim, finibus vel pretium sed, molestie sed eros. Aliquam erat volutpat. Sed blandit, lorem quis vulputate fermentum, urna odio tincidunt massa, at hendrerit elit libero at ligula. Duis lobortis et felis dapibus vehicula. Sed maximus tortor vitae quam maximus, ut semper nulla egestas
+                        <br>
                         <br>
                     </p>
                     <h1>Useful Links:</h1>
                     <ul>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
-                        <li>https://en.wikipedia.org/wiki/Red_blood_cell</li>
+                        <li>https://animagraffs.com/how-a-car-engine-works/</li>
+                        <li>https://www.zmescience.com/science/types-of-engines/</li>
+                        <li>https://itstillruns.com/build-car-engine-scratch-4702429.html</li>
                     </ul>
                 </div>
                 <a onclick="location.href='ar?model=engine_obj';" href="#">
